# quantbot

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  build.md  mcp_enhance_plan.md  package-lock.json  plan.md  pyproject.toml  start.sh  start_wintel.ps1  stop.sh  stop_wintel.ps1  test_builder.js  test_builder2.js
chatbot/: .env.example  package-lock.json  package.json
chatbot/public/: index.html
chatbot/public/css/: app.css
chatbot/public/js/: app.js  chat.js  dashboard-analyzestock.js  dashboard-components.js  dashboard-macroregime.js  dashboard-marketsnapshot.js  dashboard-recommmendstock.js  dashboard-techindicators.js  dashboard.js
chatbot/server/: index.js
chatbot/server/routes/: chat.js
chatbot/server/services/: intentRouter.js  llmService.js  mcpClient.js
chatbot/server/utils/: chartBuilder.js  (+1 more)
client/: index.html
mcp-server/: config.py  main.py  requirements.txt
mcp-server/tools/: analysis.py  fundamentals.py  macro.py  news.py  recommendation.py
mcp_server/: __init__.py  server.py
mcp_server/analysis/: __init__.py  llm_narrative.py  scoring.py  trace_logger.py
mcp_server/data/: __init__.py  abs_client.py  macro_core.py  mock_client.py  rba_client.py  yfinance_client.py
mcp_server/models/: __init__.py  macro.py  recommendation.py  technical.py
mcp_server/tools/: __init__.py  analysis.py  macro_anchor.py  macro_info.py  macro_regime.py  market_snapshot.py  recommendation.py  technical.py
server/: app.js  mcpClient.js  ollamaClient.js  package-lock.json  package.json
server/routes/: chat.js
tests/: test_smoke_contracts.py
